[project]
name = "predictive-maintenance-ai-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.1.8",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]
