[project]
name = "predictive-maintenance-ai-engine"
version = "0.1.0"
description = "Risk-aware AI decision engine for predictive maintenance"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.1.8",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
