[project]
name = "predictive-maintenance-ai-engine"
version = "0.1.0"
description = "Risk-aware AI decision engine for predictive maintenance"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.1.8",
    "langgraph-cli[inmem]>=0.4.24",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
